Closed
Bug 298072
Opened 21 years ago
Closed 21 years ago
hidechrome window drawing problem
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta4
People
(Reporter: aaiyer, Assigned: aaiyer)
Details
Attachments
(3 files)
|
14.85 KB,
image/gif
|
Details | |
|
1.76 KB,
text/plain
|
Details | |
|
570 bytes,
patch
|
roc
:
review+
roc
:
superreview+
benjamin
:
approval1.8b4+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)
Build Identifier:
There is a problem when drawing a XUL window with hidechrome enabled where the
child window is smaller in size than a parent window container that mozilla
draws, exhibiting in strange behaviour.
If I resize the window a resizer element, the child window restores to the
size of the parent window and the behaviour afterwares is ok.
Reproducible: Always
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Comment 2•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Component: XP Toolkit/Widgets → XP Toolkit/Widgets: XUL
| Assignee | ||
Comment 3•21 years ago
|
||
| Assignee | ||
Comment 4•21 years ago
|
||
The above patch fixes it. It sets the window without chrome before the sizes
is set, so that the client area is correctly calcualted.
I see this bug too. Hopefully, two pair of eyes will take this bug off of
"UNCONFIRMED" status.
The "off-blit" sections of the window seem to correspond exactly to the sizes of
the titlebar and window borders for a "normal" win32 window.
Interestingly, if I set the size of my <window> element through xml attributes,
the actual OS window created is that size, but my own art only blits into a
portion of the window and the "off blit" section is along the bottom and right
edges.
However, if I set the size from CSS, my own art blits to the proper size
specified in the CSS but my OS window is larger and the "off blit" section is
still on the bottom and right.
Updated•21 years ago
|
Attachment #187265 -
Flags: review?(roc)
Comment 6•21 years ago
|
||
Cc'ing people is always good. Confirming base don mig's testimony.
/be
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #187265 -
Flags: superreview+
Attachment #187265 -
Flags: review?(roc)
Attachment #187265 -
Flags: review+
Comment 7•21 years ago
|
||
Comment on attachment 187265 [details] [diff] [review]
patch
I'll land this.
Attachment #187265 -
Flags: approval1.8b4+
Updated•21 years ago
|
Assignee: jag → aaiyer
Comment 8•21 years ago
|
||
Fixed on trunk for 1.8b4
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta4
This bug seems to also happen when I call window.resizeTo, now :(
I'll make a new entry.
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•