Bug 298072 - XUL window with "hidechrome" draws incorrectly until it is resized - patch by Anand Aiyer <aaiyer@asvcyber.com> - r+sr=roc, a=me